# view_selection_experiments

./: .gitignore  README.md  create_experiments_related_tables.sql  experiments_db.yml  inspect_results_experiments_setup_A.ipynb  pyproject.toml  raw_means_and_ci.csv
src/experiments_orchestration/: DbtProjectHandler.py  Experiment.py  Orchestrator.py  PostgresHandler.py  PythonHandler.py  YAMLReader.py  vars_to_set.py
src/model_folders/My_Own_000/: .gitignore  .user.yml  dbt_project.yml  packages.yml  profiles.yml
src/model_folders/My_Own_000/models/: int_accounts_and_groups_joined.sql  int_grouped_on_group_id.sql  int_transactions_and_accounts_and_groups_joined.sql  int_union_of_transactions.sql  sources.yml  stg_accounts.sql  stg_groups.sql  stg_transactions_1.sql  stg_transactions_2.sql  stg_transactions_3.sql  stg_transactions_4.sql
src/model_folders/My_Own_001/: .user.yml  dbt_project.yml  profiles.yml
src/model_folders/My_Own_001/models/: all_constructor_results.sql  avg_pit_stop_time_per_race_id.sql  avg_points_per_race.sql  avg_round_per_race_id.sql  driver_id_below_10.sql  laps_better_than_10th.sql  (+12 more)
src/model_folders/My_Own_010/: .user.yml  dbt_project.yml  profiles.yml
src/model_folders/My_Own_011/: .user.yml  dbt_project.yml  profiles.yml
src/model_folders/My_Own_100/: .user.yml  dbt_project.yml  profiles.yml
src/model_folders/My_Own_101/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
src/model_folders/My_Own_111/: .user.yml  dbt_project.yml  profiles.yml
src/model_folders/My_own_110/: .user.yml  dbt_project.yml  profiles.yml
(+104 files in other folders)
